--- a/index.html
+++ b/index.html
@@ -7,6 +7,133 @@
     <title>Document</title>
 </head>
 <body>
- <h1>Hello ZaWarudo</h1>   
+
+ <header>
+
+    <h1>Spasibo chto tak dolgo jdal, Kucheriano :D</h1>
+    <p>Tut nemnojko vsyakogo smeshnogo :D</p>
+
+    <nav>
+        <div class="logo-holder">
+    <img src="/Site1/images/WorldOfTanksLogo2.jpg" alt="Document Logo" class="logo-holder">
+        </div>
+        <a href="/Site1/images/WorldOfTanksLogo.jpg"></a>
+        <ul>
+            <li>
+                <a href="">Studio</a>
+            </li>
+            
+            <li>
+                <a href="">Portfolio</a>
+            </li>
+            <li>
+                <a href="">Contacts</a>
+            </li>
+        </ul>
+    </nav>
+<address>
+ <li>
+    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+ </li>
+<li>
+    <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+ </li>
+ 
+</address>
+ </header>
+
+<main>
+    <section>
+       <h1>Effective Solutions for Your Business</h1>
+       <button type="button">Order Service</button>
+    </section>
+    <section>
+        <h2></h2>
+        <ul>
+            <li>
+        <h3>Strategy</h3>
+        <p>
+    Our goal is to identify the business problem to walk away with the perfect and creative solution.
+        </p>
+            </li>
+            <li>
+        <h3>Punctuality</h3>
+        <p>
+    Bring the key message to the brand's audience for the best price within the shortest possible time.
+        </p>
+            </li>
+            <li>
+        <h3>Diligence</h3>
+        <p>
+    Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
+        </p>
+            </li>
+            <li>
+        <h3>Technologies</h3>
+        <p>
+        Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
+        </p>
+            </li>
+        </ul>
+    </section>
+    <section>
+        <h2>What are we doing</h2>
+        <ol>
+
+         <li>
+        <img src="/Site1/images/Tankisti.jpg"
+         alt="Drink together :D" width="360">
+         <div>Drink together :D</div>
+        </li>
+         <li>
+        <img src="/Site1/images/AlkashTankist.jpg" 
+        alt="Play World Of Tanks" width="360">
+        <div>Play World Of Tanks</div>
+         </li>
+         <li>
+        <img src="/Site1/images/Tankisti2.jpg"
+        alt="Drink more ;)" width="360">
+        <div>Drink more ;)</div>
+         </li>
+
+        </ol>
+    </section>
+    <h2>Our Team</h2>
+    <ul>
+        <li>
+    <img src="/Site1/images/BomjSmeetsya.jpg" alt="Funny Homeless" width="264">
+    <h3>Mark Guerrero</h3>
+    <p>Product Designer</p>
+        </li>
+    <img src="/Site1/images/ProstoBomj.jpg" alt="Common Homeless" width="264">
+    <h3>Tom Ford</h3>
+    <p>Frontend Developer</p>
+        <li>
+    <img src="/Site1/images/Bomjiha.jpg" alt="Homeless Woman" width="264">
+    <h3>Camila Garcia</h3>
+    <p>Marketing</p>
+        </li>
+        <li>
+    <img src="/Site1/images/UmniyBomj.jpg" alt="SmartAss Homeless" width="264">
+    <h3>Daniel Wilson</h3>
+    <p>UI Designer</p>
+        </li>
+
+
+    </ul>
+    <section>
+
+    </section>
+</main>
+
+<footer> 
+<a href="/Site1/images/WorldOfTanksLogo2.jpg"></a>
+<p>
+Increase the flow of customers and sales for your business with digital marketing & growth solutions.
+</p>
+</footer>
+
 </body>
+
+
 </html>
